--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -1,20 +1,22 @@
 @import "~font-awesome/css/font-awesome.css";
+@import url('https://fonts.googleapis.com/css?family=Arimo|Open+Sans');
 
 body {
   position: relative;
   color: white;
   height: 100vh;
-  background-color: #232c39;
-  background-image: linear-gradient(45deg, rgba(0, 216, 255, 0.5) 10%, rgba(0, 1, 127, 0.7));
-  font-family: Arial, Helvetica, Helvetica Neue, serif;
+  background-color: #00001a;
+  background-image: linear-gradient(45deg, #3F51B5, 60%, #6A1B9A);
+  font-family: 'Open Sans', Arial, sans-serif;
   overflow-y: hidden;
 }
 
-h2 {
+h2, h3 {
   margin: 0;
+  font-family: 'Arimo', Arial, sans-serif;
   font-size: 2.25rem;
   font-weight: bold;
-  letter-spacing: -0.025em;
+  letter-spacing: 0.0125em;
   color: #fff;
 }
 
