--- a/app/app.global.css
+++ b/app/app.global.css
@@ -3,9 +3,10 @@
 
 body {
   position: relative;
-  color: white;
+  color: rgba(0, 0, 0, 0.87);
   height: 100vh;
-  background-image: linear-gradient(45deg, #474ebd, 60%, #6A1B9A);
+  /* background-image: linear-gradient(45deg, #474ebd, 60%, #6A1B9A); */
+  background-color: rgb(255, 255, 255);
   font-family: 'Open Sans', Arial, sans-serif;
   overflow-y: hidden;
 }
@@ -16,7 +17,7 @@ h2, h3 {
   font-size: 1.75rem;
   font-weight: bold;
   letter-spacing: 0.0125em;
-  color: #fff;
+  color: #000;
 }
 
 p {
@@ -39,13 +40,24 @@ a:hover {
   cursor: pointer;
 }
 
+.reports-container {
+  animation: fadein 2s;
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
 
 .download-btn {
   position: relative;
+  cursor: pointer;
 
   display: block;
-  margin: 30px auto;
-  height: 36px;
+  margin: 3em auto;
+  height: 96px;
+  width: 80%;
   padding: 0;
 
   overflow: hidden;
@@ -53,16 +65,20 @@ a:hover {
   outline: none;
   box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
   
-  background-color: rgba(0, 0, 0, 0.1);
-  border: 1px solid rgba(0, 0, 0, 0.4);
+  background-color: rgba(255, 64, 129, 0.6);
+  border: 10px;
   border-radius: 4;
   color: #fff;
   
   transition: background-color .3s;
 }
 
+.download-btn:disabled {
+    cursor: not-allowed;
+}
+
 .download-btn:hover, .download-btn:focus {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(255, 64, 129, 1);
 }
 
 .download-btn > * {
@@ -74,7 +90,7 @@ a:hover {
   text-transform: uppercase;
   letter-spacing: 0px;
   padding: 0 16px;
-  font-size: 14px;
+  font-size: 36px;
   font-family: 'Open Sans', Arial, sans-serif;
 }
 
